# gobiargp-gen

./: LICENSE  build-chunks.py  config.h.in  meson.build
source/: argparse.c  argparse.h  configuration.c  configuration.h  gobiargp.c  gobiargp.h  main.c  parser-chunks.c  parser-chunks.xml  parser-generator.c  parser-generator.h
test/: test.yaml
